# ChangeLog for gnome-base/gconf
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.271 2012/12/27 18:05:52 tetromino Exp $

  27 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org> gconf-2.32.4.ebuild,
  gconf-3.2.5.ebuild, metadata.xml:
  Make gtk dependency optional (bug #448868, thanks to wbrana). Drop useless
  doc USE flag. Switch to global introspection flag. Update to EAPI5, update
  license.

  06 Oct 2012; Pacho Ramos <pacho@gentoo.org>
  -files/gconf-3.2.3-shutdown-crash.patch, -gconf-3.2.3-r1.ebuild,
  -gconf-3.2.3.ebuild, gconf-2.32.4.ebuild:
  Stop using EXTRA_EMAKE, bug #437342 by Michał Górny. Drop old.

  22 May 2012; Justin Lecher <jlec@gentoo.org> gconf-3.2.5.ebuild:
  Add small prefix fix, drop unnecessary die

  09 May 2012; Alexis Ballier <aballier@gentoo.org> gconf-3.2.5.ebuild:
  keyword ~amd64-fbsd

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> gconf-2.32.4.ebuild,
  gconf-3.2.3.ebuild, gconf-3.2.3-r1.ebuild, gconf-3.2.5.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*gconf-3.2.5 (12 Apr 2012)

  12 Apr 2012; Gilles Dartiguelongue <eva@gentoo.org> -gconf-2.32.3.ebuild,
  +gconf-3.2.5.ebuild:
  Version bump. Drop old revisions.

  11 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  gconf-3.2.3-r1.ebuild:
  Add warning message to pkg_postinst() asking users to restart their desktop
  session after upgrading to gconf-3.2.3-r1 to prevent 'Method ... on interface
  "org.gnome.GConf.Server" doesn't exist' errors (bug #411587, thanks to
  Juergen Rose and Rafał Mużyło).

*gconf-3.2.3-r1 (11 Apr 2012)

  11 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +gconf-3.2.3-r1.ebuild, +files/gconf-3.2.3-shutdown-crash.patch:
  Have USE=-orbit by default to work around bug #411237 (enormously overgrown
  ~/.gconfd/saved_state). Fix a crash when USE=-orbit.

*gconf-3.2.3 (07 Nov 2011)
