@@ -5,18 +5,18 @@ AUX gconf-2.24.0-no-gconfd.patch 787 SHA256 f8352648276d2a2dab162ddade55ec0371e7
 AUX gconf-2.28.0-entry-set-value-sigsegv.patch 533 SHA256 e58c0981491e794de05dd71562e0a9675433469e87c7149088ebea432c9619b0 SHA512 c0576004aa8c8b64750037183a5d3df5b4d8ba520c83f33a906a8549139e2167d08c1bcc56cbdfe202bb078a703bd561680af63588f7ee4eb42ad6077182a3fa WHIRLPOOL eddf3b88ddbec7e29f2a58e6ccf26859e0846ec9b01e821f28dc584a9ad297805f5313e29dca5e5d576cca704e1ddb458fd322a3380ed65ddd4bb7d6924d862c
 DIST GConf-2.32.4.tar.xz 1326600 SHA256 f36f4a01a5ac898b5ec49a04a43b051d3809f07c3d0841188fd6a5c512389025 SHA512 fabcd35ae9dd50969dc60219172e613fdb9f81ecaf182003a7e9d81745ffa9931fc279383dae9d6eb25817f594ab38e1ec2e910e14df402a1cb515eae258358f WHIRLPOOL 836491977e5af62a02fa8e70c92f2c2a07c350aabd44b75b0e9ab203c36d0fd53ed7605e26c81a01e498c8bb7d5e3089427ede8d7583964b65aecc46ddac7faf
 DIST GConf-3.2.5.tar.xz 1525188 SHA256 4ddea9503a212ee126c5b46a0a958fd5484574c3cb6ef2baf38db02e819e58c6 SHA512 d67427a275bc62531232d8cf9641135a03567aef7a97b014d86058df20279004b785b9bfaf11f4f5f88c7187c2b68a138074c5dd0d1e5e1347ebb2b394367926 WHIRLPOOL a1fc6a3bd1fe088438178cec9e891e2997abd1ffff6ddcec799c637dc2e2b7a57d1dbb939f281a28e7323ec9b5a31867ec21346919d963326583bafcb9226eb7
-EBUILD gconf-2.32.4.ebuild 2387 SHA256 85b3baf13c1606726ecf3a9f401270056cb6ee4847feea35e68010f0768b03e0 SHA512 c0530e7ba36203607b36ac6bdc85b4bed8bd2d702a61ba6ac09cca1c77ab19c73aa783cd9a73819d044b478bf94b23045d31f94c4c8c1800e3f8e0f1ba82eb5e WHIRLPOOL 74dbecc4fc5122a00a7aae770db34d1f481b7a1689f144d75484989508705f46a3417e643edf214aa95ea05781f85dc5f9797c5c34aabae72baf612983afb2f6
-EBUILD gconf-3.2.5.ebuild 2973 SHA256 f94e99dfe630ba42a2d0e49a6c3a93e23d459d3d7c7f41967e2cbca0c227c7f3 SHA512 69d930de2287e5aea5b6e43ec2133980d9a70610a5125c8ea7070e67d125b0726218b84ce4e71d751dcc702cb42acefdc77d7bf6c2db548262b35fd533bca693 WHIRLPOOL 9b534f75cba6ac0acaf4d86a763fccbf1049248afcccccfb6d9338675be9046d387151de4e72d93515e3f1e67e917e4168c19d8fc2771362d6c3ff5ca0824b3c
-MISC ChangeLog 36362 SHA256 5017d22483c5db9e95be95f7bd3f7eb84f747b0c02a84040b8a5bb64c8fa1d47 SHA512 e66d6714c2096e025de1675df912c79181c4c1870fc18f0e0c3caab54f81e5568203ac089eb87093272410dd6c536a449a8dd0900068a15962aa11e50aadbe03 WHIRLPOOL 524ff5e8363bbf45007dc416fb79c65aac28a15192dae950eac9742e16ec135ed5119f3144d463d0524f1a6585e0a67c63b5190e9b1b5f9a0e40bbca9037cec1
+EBUILD gconf-2.32.4.ebuild 2404 SHA256 4fbf9c555d07a0b62ed8b94a91fd2999c9e83478f60172f71d6dbc58bdb71627 SHA512 61f32422c4f57055218b63075839ad6170196d455289445a0e28321f13a3486dc812b5ee8623edb72baa7430884bc1db9465805ab10f70c729106117df33e585 WHIRLPOOL 45a297fc1420b581a4989d39a1d4637774c556aaa2eecb8467ae622079aa30cfe4e266456960cd1b99fa42eaaf9ee3e7976976cd7cd5b4b7d3e57a425360b548
+EBUILD gconf-3.2.5.ebuild 2990 SHA256 bdd261d9b6dfb098b0cd98816776ac45c097a7f9026f6844aea840abf17e936f SHA512 d8234b244280a015057f41d024cfbb8c56f02327925f099ec42e994a0967474b8a619838d6792135b4909e90d163f9ec8078c0308d3f8bf0859a0de54455d75c WHIRLPOOL c453996d168d32ded10193c250aa2f79d2556e554647153dc276bef6200a1321f4b24ec8ba6e4273c61e9686b5bcb92d66a0dc8cf797eccd626f4247f6b2fb26
+MISC ChangeLog 36625 SHA256 1ad97333a76425911210a331d82cd0c83f9b007e2ff8e7b7fc134b1b47ffc48d SHA512 92c8089c1e99e02ed76a6301e65fa51ea67ea8faf2c431d08f7a3c3588347788846ba9d0e5a7af9d9824c182bf799fafcbd52dcb0d5b5aa2ec6ca73b2e225a6a WHIRLPOOL 3a761d3a43f23fd40ae608c967cb0bb4730ab004cf066f7a108f38a2478f1bdd3c07083f5689e14204ec4466e062d8bdb2ef844261582dc5bfb023463a68fec1
 MISC metadata.xml 429 SHA256 ff1cdff3275ccf7ecf64d87d5929fa31dcb9c6d16647e39bc45348a665e49cb6 SHA512 b911347c41a8957ba77c82f59f9a2d90c1f39b89b85457c157e7e164bdd9d545f12be95dfe10ac0fe10e57c327ef90be81ed67cbdf16f588242ef443c2d3c6a3 WHIRLPOOL dd892feb28b9320dc5bc7cb4e92cae26926e7a3d3b0201bd64c9c73417a214e12e2e3ea067d5670cfec80c4c719841d90601ea0d99ab6db4ffa9be6a9c8916f5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQ3I4BAAoJEJ0WA1zPCt1hUFkIALhyowsVpvfq3cxfm9y5I6fA
-floWM+vosKiVP3n5tPGtGBl0fzFFboLl1jCCibxjYKM8GOOveGFuEB0SVtPCPHFE
-zM3e+cvYzc9PDJ6MmhtaguJDJZfVAjeuAut/Hukr73a2EhGDoi6YDOHeB1oglk4V
-dh3FJ2DNI204cVGWbiAyWUH8dMNofAAjXgRoHmuk18rSSHMYH2NtPG5bl1zM89Va
-URx+K/CfgpyREQsdoaSi0RLDBAC4qcFjLn1yZl/MmqIO/tq6lqd0VJFDW+lJTXAH
-Xw9t/elVspND025UkGRSjAJgSWldVkDDzjWHbw9a/8kUO3F8zHTt4NVGD7Zm1Q4=
-=kTOb
+iQEcBAEBCAAGBQJQ3NrnAAoJEJ0WA1zPCt1hn/kH/jnB2rhQrmvtwJAZmigIzfZG
+AWPsRF141CTS5f0X806V/QB/bHq296aAJYDM41lIScsJW6QXjP9By27dlOtsJYMA
+ljqJLKh0+/9LcP/OLlZwL0I4BwBKtmqP0TQM5eupvFaclDAUufmGvHv0fQ/0jVPW
+Q+UxnjXnvXc8uc+oPqwlXDrj7QjUQhRvyGRl8+GmLJLTD4Mn92704Iq5xC2MuF/H
++49DizcJuGj12vln/e/QIgfPpnSwSaA6Q1NfLs88SNcHvTb3jQvMPXQDdaehiKv6
+F15SB0FR3PcFaOHAiY9eAsqk3/M+zMWuFbF8a7VD4Hxis6vMEY/AwAf1UX1QNIA=
+=NhSs
 -----END PGP SIGNATURE-----
