@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/Attic/gconf-3.2.5.ebuild,v 1.5 2012/12/27 18:05:52 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/Attic/gconf-3.2.5.ebuild,v 1.6 2012/12/27 23:33:58 tetromino Exp $
 
 EAPI="5"
 GCONF_DEBUG="yes"
@@ -32,6 +32,10 @@ DEPEND="${RDEPEND}
 	>=dev-util/intltool-0.35
 	virtual/pkgconfig"
 
+pkg_setup() {
+	kill_gconf
+}
+
 src_prepare() {
 	G2CONF="${G2CONF}
 		--disable-static
@@ -44,7 +48,6 @@ src_prepare() {
 		$(use_enable policykit defaults-service)
 		ORBIT_IDL=$(type -P orbit-idl-2)"
 		# Need host's IDL compiler for cross or native build, bug #262747
-	kill_gconf
 
 	gnome2_src_prepare
 
