@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/gconf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.271 2012/12/27 18:05:52 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.272 2012/12/27 23:33:58 tetromino Exp $
+
+  27 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org> gconf-2.32.4.ebuild,
+  gconf-3.2.5.ebuild:
+  Move kill_gconf to pkg_setup in an attempt to fix access violations
+  experienced by some users (bug #448952; thanks to iamben for the suggested
+  solution).
 
   27 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org> gconf-2.32.4.ebuild,
   gconf-3.2.5.ebuild, metadata.xml:
